AnimiqCore/host/HostCore/NativeCoreInterop.cs

using System;
using System.IO;
using System.Runtime.InteropServices;
using System.Text;

namespace HostCore;

public enum NcResultCode : uint
{
    Ok = 0,
    NotInitialized = 1,
    InvalidArgument = 2,
    Io = 3,
    Unsupported = 4,
    Internal = 5,
}

public enum NcAvatarFormatHint : uint
{
    Auto = 0,
    Vrm = 1,
    VxAvatar = 2,
    VsfAvatar = 3,
    Vxa2 = 4,
    Miq = 5,
}

public enum NcCameraMode : uint
{
    AutoFitFull = 0,
    AutoFitBust = 1,
    Manual = 2,
}

public enum NcRenderQualityProfile : uint
{
    Default = 0,
    Balanced = 1,
    UltraParity = 2,
    FastFallback = 3,
}

public enum NcPoseBoneId : uint
{
    Unknown = 0,
    Hips = 1,
    Spine = 2,
    Chest = 3,
    UpperChest = 4,
    Neck = 5,
    Head = 6,
    LeftUpperArm = 7,
    RightUpperArm = 8,
    LeftShoulder = 9,
    RightShoulder = 10,
    LeftLowerArm = 11,
    RightLowerArm = 12,
    LeftHand = 13,
    RightHand = 14,
}

[StructLayout(LayoutKind.Sequential)]
public struct NcInitOptions
{
    public uint ApiVersion;
    public uint Reserved;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcAvatarLoadRequest
{
    public string Path;
    public NcAvatarFormatHint FormatHint;
    public uint ShaderProfile;
    public uint FallbackPolicy;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcAvatarInfo
{
    public ulong Handle;
    public NcAvatarFormatHint DetectedFormat;
    public uint CompatLevel;
    public uint MeshCount;
    public uint MaterialCount;
    public uint MeshPayloadCount;
    public uint MaterialPayloadCount;
    public uint TexturePayloadCount;
    public uint FormatSectionCount;
    public uint FormatDecodedSectionCount;
    public uint FormatUnknownSectionCount;
    public uint WarningCount;
    public uint WarningCodeCount;
    public uint CriticalWarningCount;
    public uint MaterialDiagCount;
    public uint OpaqueMaterialCount;
    public uint MaskMaterialCount;
    public uint BlendMaterialCount;
    public uint MissingFeatureCount;
    public uint ExpressionCount;
    public uint LastRenderDrawCalls;
    public uint SpringActiveChainCount;
    public uint SpringCorrectedChainCount;
    public uint SpringDisabledChainCount;
    public uint SpringUnsupportedColliderChainCount;
    public uint MtoonAdvancedParamMaterialCount;
    public uint MtoonFallbackMaterialCount;
    public float SpringAvgSubsteps;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
    public string DisplayName;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 260)]
    public string SourcePath;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string ParserStage;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string PrimaryErrorCode;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string LastWarningCode;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
    public string LastWarningSeverity;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
    public string LastWarningCategory;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
    public string LastExpressionSummary;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string LastWarning;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string LastMaterialDiag;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
    public string LastRenderPassSummary;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string LastMissingFeature;
    public float ParityScore;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string VariantId;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string ParityFallbackReason;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
    public string QualityMode;
    public uint FamilyBackendFallbackCount;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string SelectedFamilyBackend;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
    public string ActivePasses;
    public uint MaterialParityMismatchCount;
    public uint TextureResolveAmbiguousCount;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string MaterialParityLastMismatch;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcExpressionInfo
{
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string Name;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string MappingKind;
    public float DefaultWeight;
    public float RuntimeWeight;
    public uint BindCount;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcSpringBoneInfo
{
    public uint Present;
    public uint SpringCount;
    public uint JointCount;
    public uint ColliderCount;
    public uint ColliderGroupCount;
    public uint ActiveChainCount;
    public uint CorrectedChainCount;
    public uint DisabledChainCount;
    public uint UnsupportedColliderChainCount;
    public float AvgSubsteps;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcAvatarRuntimeMetricsV2
{
    public uint SpringActiveChainCount;
    public uint SpringConstraintHitCount;
    public uint SpringDampingEventCount;
    public float SpringAvgOffsetMagnitude;
    public float SpringPeakOffsetMagnitude;
    public uint MtoonOutlineMaterialCount;
    public uint MtoonUvAnimMaterialCount;
    public uint MtoonMatcapMaterialCount;
    public uint MtoonBlendMaterialCount;
    public uint MtoonMaskMaterialCount;
    public float LastFrameMs;
    public float TargetFrameMs;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string PhysicsSolver;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string MtoonRuntimeMode;
    public int ContractPreviewYawDeg;
    public uint TransformConfidenceLevel;
    public uint IsVrmOriginMiq;
    public uint PreviewBoundsExcludedMeshCount;
    public uint PreviewHairCandidateMeshCount;
    public float PreviewHairHeadAlignmentScore;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcTrackingFrame
{
    public float HeadPosX;
    public float HeadPosY;
    public float HeadPosZ;
    public float HeadRotX;
    public float HeadRotY;
    public float HeadRotZ;
    public float HeadRotW;
    public float EyeGazeLX;
    public float EyeGazeLY;
    public float EyeGazeLZ;
    public float EyeGazeRX;
    public float EyeGazeRY;
    public float EyeGazeRZ;
    public float BlinkL;
    public float BlinkR;
    public float MouthOpen;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcExpressionWeight
{
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string Name;
    public float Weight;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcSpoutOptions
{
    public uint Width;
    public uint Height;
    public uint Fps;
    [MarshalAs(UnmanagedType.LPStr)]
    public string ChannelName;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcSpoutReceiverOptions
{
    [MarshalAs(UnmanagedType.LPStr)]
    public string ChannelName;
    public uint ForceLinear;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcOscOptions
{
    public ushort BindPort;
    [MarshalAs(UnmanagedType.LPStr)]
    public string PublishAddress;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcWindowRenderTarget
{
    public IntPtr Hwnd;
    public uint Width;
    public uint Height;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcThumbnailRequest
{
    public ulong Handle;
    [MarshalAs(UnmanagedType.LPStr)]
    public string OutputPath;
    public uint Width;
    public uint Height;
    public float DeltaTimeSeconds;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcRenderQualityOptions
{
    public NcCameraMode CameraMode;
    public float FramingTarget;
    public float Headroom;
    public float YawDeg;
    public float FovDeg;
    public float BackgroundR;
    public float BackgroundG;
    public float BackgroundB;
    public float BackgroundA;
    public uint QualityProfile;
    public uint ShowDebugOverlay;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcLightingOptions
{
    public float LightPositionX;
    public float LightPositionY;
    public float LightPositionZ;
    public float LightEulerPitchDeg;
    public float LightEulerYawDeg;
    public float LightEulerRollDeg;
    public float Intensity;
    public float Range;
    public float SpotAngleDeg;
    public float InnerSpotAngleDeg;
    public float ShadowStrength;
    public float ShadowBias;
    public float ShadowNormalBias;
    public float ShadowNearPlane;
    public uint ShadowResolution;
    public float AmbientIntensity;
    public uint EnableSunLight;
    public uint EnableShadow;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcPoseBoneOffset
{
    public NcPoseBoneId BoneId;
    public float PitchDeg;
    public float YawDeg;
    public float RollDeg;
}

[StructLayout(LayoutKind.Sequential)]
public struct NcRuntimeStats
{
    public uint RenderReadyAvatarCount;
    public uint SpoutActive;
    public uint OscActive;
    public float LastFrameMs;
    public float GpuFrameMs;
    public float CpuFrameMs;
    public float MaterialResolveMs;
    public uint PassCount;
}

public enum NcSpoutBackendKind : uint
{
    Inactive = 0,
    LegacySharedMemory = 1,
    Spout2Gpu = 2,
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcSpoutDiagnostics
{
    public uint BackendKind;
    public uint StrictMode;
    public ulong FallbackCount;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string LastErrorCode;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcSpoutReceiverDiagnostics
{
    public uint Active;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string ChannelName;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
    public string LastErrorCode;
}

[StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
public struct NcErrorInfo
{
    public NcResultCode Code;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
    public string Subsystem;
    [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
    public string Message;
    public byte Recoverable;
}

public static class NativeCoreInterop
{
    private const string DllName = "nativecore.dll";
    private const int MaxModulePathChars = 1024;

    [DllImport("kernel32.dll", CharSet = CharSet.Unicode, SetLastError = true)]
    private static extern IntPtr GetModuleHandleW(string moduleName);

    [DllImport("kernel32.dll", CharSet = CharSet.Unicode, SetLastError = true)]
    private static extern uint GetModuleFileNameW(IntPtr module, StringBuilder fileName, int size);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_initialize(ref NcInitOptions options);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_shutdown();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public static extern NcResultCode nc_load_avatar(
        ref NcAvatarLoadRequest request,
        out ulong outHandle,
        out NcAvatarInfo outInfo);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_unload_avatar(ulong handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_avatar_info(ulong handle, out NcAvatarInfo outInfo);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    public static extern NcResultCode nc_get_expression_count(ulong handle, out uint outCount);
